# Ft_scop

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
Models/BugattiV2/: untitled.mtl
Models/Cube/: untitled.mtl.mtl
include/: Camera.h  InputHandler.h  Mesh.h  ObjLoader.h  Scene.h  Shader.h  Texture.h  includes.h  includes.hpp  shaders.h  struct.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  InputHandler.cpp  Mesh.cpp  ObjLoader.cpp  Scene.cpp  Shader.cpp  Texture.cpp  main.cpp  shaders.cpp
